edit /sales
